<resources>
    <string name="app_name">Jotter</string>
    <string name="jot_title">Jot title</string>
    <string name="create_note">Create note</string>
    <string name="note_title">Wisdom Book</string>
    <string name="note_body">It\'s better not to know things sometimes.</string>
    <string name="jot_body">Jot Body</string>
    <string name="edit">Edit</string>
    <string name="save_jot">Save jot</string>
    <string name="type_note">Type note</string>
    <string name="more_options">More options</string>
    <string name="night_mode">Night mode</string>
    <string name="light_mode">Light mode</string>
    <string name="date">3|4|2022</string>
    <string name="time">1:37am</string>
    <string name="saving_empty_note_text">Note must not be empty.</string>
    <string name="save_note_text">Note saved.</string>
    <string name="note_updated_text">Note updated successfully.</string>
    <string name="note_not_updated_text">Fill in at least one field</string>
    <string name="share">Share…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text">%s\n%2s</string>
    <string name="subject_text">Note text</string>
    <string name="jotter_empty_text"><b>No notes saved.</b>\n\nClick on the \'add button\' (+) below to write a note.</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="archived">Archived</string>
    <string name="empty_archive_text">Archive a note to see it here.</string>
    <string name="jot_archived">\'%s\' archived</string>
    <string name="note_archived">Notes archived</string>
    <string name="chooser_title">Share note via</string>
    <string name="unarchive">Unarchive</string>
    <string name="jot_unarchived">\'%s\' unarchived</string>
    <string name="undo">UNDO</string>
    <string name="close">Close</string>
    <string name="continue_action">Continue</string>
    <string name="deleted">Deleted</string>
    <string name="delete_multiple_note">Move %d notes to Trash?\nYou can still restore these notes from Trash.</string>
    <string name="delete_this_note">Move \'%s\' to Trash?\nYou can still restore this note from Trash.</string>
    <string name="archive_empty">Archive empty</string>
    <string name="incorrect_password">Incorrect PIN</string>
    <string name="password">****</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="archive_locked">Archive locked</string>
    <string name="next">NEXT</string>
    <string name="lock">Lock</string>
    <string name="archive_not_locked_text">Turn on this setting to enable Archive privacy, securing all archived notes.</string>
    <string name="archive_locked_text">Turning this setting off will disable Archive privacy, leaving any personal information unprotected.</string>
    <string name="change_pin">Change PIN</string>
    <string name="unlock_archive">Unlock Archive</string>
    <string name="lock_archive">Lock Archive</string>
    <string name="archive_lock">Archive Lock</string>
    <string name="switch_to_night">Switch to dark mode</string>
    <string name="switch_to_light">Switch to light mode</string>
    <string name="pin_tip">PIN must contain 4 – 8 digits.</string>
    <string name="pin_tip_toast">PIN must be at least 4 digits!</string>
    <string name="old_pin">Input Old PIN</string>
    <string name="new_pin">Input New PIN</string>
    <string name="set_button">SET</string>
    <string name="pin_changed_text">PIN successfully changed!</string>
    <string name="pin_set_text">PIN successfully set!</string>
    <string name="lock_dialog_message">To enable Archive privacy, please first set up your PIN</string>
    <string name="lock_dialog_pos_button">Set PIN</string>
    <string name="lock_dialog_neg_button">Later</string>
    <string name="set_pin">Set up Archive lock</string>
    <string name="pin_does_not_match">PIN does not match!</string>
    <string name="confirm_pin">Confirm your PIN</string>
    <string name="a">A</string>
    <string name="text_setting">Text setting</string>
    <string name="note_saved_message">Note has not been saved yet. Are you sure you want to discard note?</string>
    <string name="note_updated_message">Note changes have not been saved yet. Are you sure you want to discard changes?</string>
    <string name="discard">Discard</string>
    <string name="discard_">Discard?</string>
    <string name="save">Save</string>
    <string name="trash">Trash</string>
    <string name="empty_trash_text">Nothing in Trash</string>
    <string name="move_to_trash">Move to Trash</string>
    <string name="move_to_trash_">Move to Trash?</string>
    <string name="moved_to_trash">Moved to Trash</string>
    <string name="restore">Restore</string>
    <string name="delete_permanently">Delete permanently</string>
    <string name="delete_permanently_">Delete permanently?</string>
    <string name="restored">Restored</string>
    <string name="delete_permanently_dialog">\'%s\' will be permanently deleted. Are you sure you want to continue?</string>
    <string name="delete_multiple_permanently_dialog">Notes will be permanently deleted. Are you sure you want to continue?</string>
    <string name="star">Star</string>
    <string name="unstar">Unstar</string>
    <string name="note_starred">Note starred</string>
    <string name="move_to_archive">Move to Archive</string>
    <string name="unarchived">Unarchived</string>
    <string name="note_unarchived">Notes unarchived</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="note">Note</string>
</resources>