<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="65dp"
        android:autofillHints="@string/jot_title"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/jot_title"
        android:inputType="textShortMessage"
        android:textSize="20sp"
        android:textStyle="bold"
        android:maxLength="40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/jot_body"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textLongMessage|textAutoCorrect|textMultiLine|text"
        android:hint="@string/type_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_title"
        tools:ignore="LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>