<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/jotterFragment">

    <fragment
        android:id="@+id/jotterFragment"
        android:name="com.roland.android.jotter.view.main.JotterFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_jotter" >
        <action
            android:id="@+id/move_to_jot"
            app:destination="@id/jotFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/move_into_editing"
            app:destination="@id/jotEditFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:popExitAnim="@anim/slide_out_bottom" />
    </fragment>
    <fragment
        android:id="@+id/jotFragment"
        android:name="com.roland.android.jotter.view.details.JotFragment"
        tools:layout="@layout/fragment_jot" >
        <action
            android:id="@+id/move_to_edit"
            app:destination="@id/jotEditFragment" />
        <argument
            android:name="note"
            app:argType="com.roland.android.jotter.model.Note" />
        <action
            android:id="@+id/jotFragment_to_jotBottomSheet"
            app:destination="@id/jotBottomSheet" />
        <action
            android:id="@+id/jot_to_trashJotBottomSheet"
            app:destination="@id/trashJotBottomSheet" />
    </fragment>
    <fragment
        android:id="@+id/jotEditFragment"
        android:name="com.roland.android.jotter.view.details.JotEditFragment"
        android:label=""
        tools:layout="@layout/fragment_jot_edit">
        <action
            android:id="@+id/action_jotEdit_to_jot"
            app:destination="@id/jotFragment"
            app:popUpTo="@id/jotFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="edit"
            app:argType="com.roland.android.jotter.model.Note"
            app:nullable="true" />
    </fragment>
    <dialog
        android:id="@+id/jotterBottomSheet"
        android:name="com.roland.android.jotter.view.dialog.JotterBottomSheet"
        tools:layout="@layout/jotter_bottom_sheet" />
    <dialog
        android:id="@+id/jotBottomSheet"
        android:name="com.roland.android.jotter.view.dialog.JotBottomSheet"
        tools:layout="@layout/jot_bottom_sheet" >
        <argument
            android:name="utils"
            app:argType="com.roland.android.jotter.model.Note" />
    </dialog>
    <fragment
        android:id="@+id/archiveLock"
        android:name="com.roland.android.jotter.view.archive.ArchiveLock"
        android:label=""
        tools:layout="@layout/fragment_archive_lock" >
        <argument
            android:name="changePassword"
            app:argType="string"
            android:defaultValue="enter" />
    </fragment>
    <fragment
        android:id="@+id/archiveFragment"
        android:name="com.roland.android.jotter.view.archive.ArchiveFragment"
        android:label="@string/archive"
        tools:layout="@layout/fragment_archive">
        <action
            android:id="@+id/archive_to_jot"
            app:destination="@id/jotFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>
    <dialog
        android:id="@+id/archiveBottomSheet"
        android:name="com.roland.android.jotter.view.dialog.ArchiveBottomSheet"
        tools:layout="@layout/archive_bottom_sheet" >
        <action
            android:id="@+id/archiveBottomSheet_to_archiveLock"
            app:destination="@id/archiveLock" />
    </dialog>
    <fragment
        android:id="@+id/trashFragment"
        android:name="com.roland.android.jotter.view.trash.TrashFragment"
        android:label="@string/trash"
        tools:layout="@layout/fragment_trash" >
        <action
            android:id="@+id/trash_to_jot"
            app:destination="@id/jotFragment" />
    </fragment>
    <dialog
        android:id="@+id/trashJotBottomSheet"
        android:name="com.roland.android.jotter.view.dialog.TrashJotBottomSheet"
        tools:layout="@layout/trash_jot_bottom_sheet" >
        <argument
            android:name="trash"
            app:argType="com.roland.android.jotter.model.Note" />
    </dialog>
</navigation>